--- a/245 site/placeholderBuy.html
+++ b/245 site/placeholderBuy.html
@@ -59,9 +59,7 @@
     <main>
         <center>
         </br></br></br>
-          <h2>This page is under construction!</h2> 
-          </br>
-          <h4> Check back later! </h4>
+          <h2>Artwork Coming Soon!</h2>
         </center>
       </main>
     <div class="footer">
