--- a/245 site/placeholderSell.html
+++ b/245 site/placeholderSell.html
@@ -59,7 +59,7 @@
     <main>
         <center>
         </br></br></br>
-          <h2>This page is under construction!</h2> 
+          <h2>Consignment Info</h2> 
           </br>
           <h4> Check back later! </h4>
         </center>
