--- a/245 site/index.html
+++ b/245 site/index.html
@@ -42,9 +42,14 @@
         <a href="underConstruction.html">
           <div class="tab1">Artwork</div>
         </a>
-        <a href="underConstruction.html">
-          <div class="tab2">Collections</div>
-        </a>
+        <div class="dropdown">
+          <div class="tab2"> More Info </div>
+          <div class="dropdown-content">
+            <a href="placeholderBuy.html"><p>Buy</p></a>
+            <a href="placeholderSell.html"><p>Sell</p></a>
+          </div>
+        </div>
+        
         <a href="underConstruction.html">
           <div class="tab3">About</div>
         </a>
