MVP final for 2.25
this is really ass 
added:
- artwork gallery menu
- example artwork page

ignore how awful it is its just to have it in for class today

--- a/245 site/contact.html
+++ b/245 site/contact.html
@@ -59,44 +59,11 @@
     <main>
         <center>
         </br></br></br>
-          <table>
-            <tr>
-              <td>
-                <a href="exArt.html"><img src="artwork/exampleWork2.jpg" width="50%"></a>
-              </td>
-              <td>
-                <a href="exArt.html"><img src="artwork/exampleWork2.jpg" width="50%"></a>
-              </td>
-              <td>
-                <a href="exArt.html"><img src="artwork/exampleWork2.jpg" width="50%"></a>
-              </td>
-            </tr>
-          </br></br>
-          <tr>
-            <td>
-              <a href="exArt.html"><img src="artwork/exampleWork2.jpg" width="50%"></a>
-            </td>
-            <td>
-              <a href="exArt.html"><img src="artwork/exampleWork2.jpg" width="50%"></a>
-            </td>
-            <td>
-              <a href="exArt.html"><img src="artwork/exampleWork2.jpg" width="50%"></a>
-            </td>
-          </tr>
-        </br></br>
-          <tr>
-          <td>
-            <a href="exArt.html"><img src="artwork/exampleWork2.jpg" width="50%"></a>
-          </td>
-          <td>
-            <a href="exArt.html"><img src="artwork/exampleWork2.jpg" width="50%"></a>
-          </td>
-          <td>
-            <a href="exArt.html"><img src="artwork/exampleWork2.jpg" width="50%"></a>
-          </td>
-        </tr>
-
-          </table>
+          <h2>Contact</h2> 
+          </br>
+          <h4> Phone Number: XXX-XXX-XXXX </h4> </br>
+          <h4> Email: kaysoriginals@email.com </h4>
+          <h4> Address: 123 Street Street </h4>
         </center>
       </main>
     <div class="footer">
