--- a/245 site/exArt.html
+++ b/245 site/exArt.html
@@ -40,15 +40,15 @@
           <div class="logoText">Kay's Originals</div>
         </a>
         <a href="artwork.html">
-          <div class="tab1">Artwork</div>
-        </a>
-        <div class="dropdown">
-          <div class="tab2"> More Info </div>
-          <div class="dropdown-content">
-            <div class = "droptabs"><a href="underConstruction.html"><p>Buy</p></a></div>
-            <div class = "droptabs"><a href="placeholderSell.html"><p>Sell</p></a></div>
+            <div class="tab1">Artwork</div>
+          </a>
+          <div class="dropdown">
+            <div class="tab2"> More Info </div>
+            <div class="dropdown-content">
+              <div class = "droptabs"><a href="underConstruction.html"><p>Buy</p></a></div>
+              <div class = "droptabs"><a href="placeholderSell.html"><p>Sell</p></a></div>
+            </div>
           </div>
-        </div>
         
         <a href="underConstruction.html">
           <div class="tab3">About</div>
@@ -57,47 +57,24 @@
     </nav>
 
     <main>
-        <center>
+       
         </br></br></br>
           <table>
             <tr>
-              <td>
-                <a href="exArt.html"><img src="artwork/exampleWork2.jpg" width="50%"></a>
-              </td>
-              <td>
-                <a href="exArt.html"><img src="artwork/exampleWork2.jpg" width="50%"></a>
-              </td>
-              <td>
-                <a href="exArt.html"><img src="artwork/exampleWork2.jpg" width="50%"></a>
-              </td>
+                <td width ="10%"> </td>
+                <td width = "40%">
+                    <img src = "artwork/exampleWork.webp" width = "70%"> 
+                </td>
+                <td width = "40%">
+                    <h2> Artwork Name</h2> </br></br>
+                    <h4> Artist Name </h4></br>
+                    <h4> Medium </h4></br>
+                    <h4> Size </h4>
+                </td>
+                <td width ="10%"> </td>
             </tr>
-          </br></br>
-          <tr>
-            <td>
-              <a href="exArt.html"><img src="artwork/exampleWork2.jpg" width="50%"></a>
-            </td>
-            <td>
-              <a href="exArt.html"><img src="artwork/exampleWork2.jpg" width="50%"></a>
-            </td>
-            <td>
-              <a href="exArt.html"><img src="artwork/exampleWork2.jpg" width="50%"></a>
-            </td>
-          </tr>
-        </br></br>
-          <tr>
-          <td>
-            <a href="exArt.html"><img src="artwork/exampleWork2.jpg" width="50%"></a>
-          </td>
-          <td>
-            <a href="exArt.html"><img src="artwork/exampleWork2.jpg" width="50%"></a>
-          </td>
-          <td>
-            <a href="exArt.html"><img src="artwork/exampleWork2.jpg" width="50%"></a>
-          </td>
-        </tr>
-
           </table>
-        </center>
+
       </main>
     <div class="footer">
       <p>footer text</p>
