--- a/245 site/placeholderSell.html
+++ b/245 site/placeholderSell.html
@@ -39,14 +39,14 @@
         <a class="home-link" href="index.html">
           <div class="logoText">Kay's Originals</div>
         </a>
-        <a href="underConstruction.html">
+        <a href="artwork.html">
           <div class="tab1">Artwork</div>
         </a>
         <div class="dropdown">
           <div class="tab2"> More Info </div>
           <div class="dropdown-content">
-            <a href="placeholderBuy.html"><p>Buy</p></a>
-            <a href="placeholderSell.html"><p>Sell</p></a>
+            <div class = "droptabs"><a href="underConstruction.html"><p>Buy</p></a></div>
+            <div class = "droptabs"><a href="placeholderSell.html"><p>Sell</p></a></div>
           </div>
         </div>
         
@@ -61,7 +61,9 @@
         </br></br></br>
           <h2>Consignment Info</h2> 
           </br>
-          <h4> Check back later! </h4>
+          <p> Kay’s Originals operates under a consignment sale process. We retain the balance of the sold artwork, and you receive a percentage.</br></br>
+            See the Consignment Agreement Contract attached below. Reach out with any questions! 
+             </p>
         </center>
       </main>
     <div class="footer">
