--- a/245 site/index.html
+++ b/245 site/index.html
@@ -39,14 +39,14 @@
         <a class="home-link" href="index.html">
           <div class="logoText">Kay's Originals</div>
         </a>
-        <a href="underConstruction.html">
+        <a href="artwork.html">
           <div class="tab1">Artwork</div>
         </a>
         <div class="dropdown">
           <div class="tab2"> More Info </div>
           <div class="dropdown-content">
-            <a href="placeholderBuy.html"><p>Buy</p></a>
-            <a href="placeholderSell.html"><p>Sell</p></a>
+            <div class = "droptabs"><a href="underConstruction.html"><p>Buy</p></a></div>
+            <div class = "droptabs"><a href="placeholderSell.html"><p>Sell</p></a></div>
           </div>
         </div>
         
@@ -78,7 +78,10 @@
       </div>
       </br></br></br>
       <center>
-    <a href = "underConstruction.html"><h2> More Info</h2></a>
+      </br>
+      <img width = "20%" src = "images/KaysOrigLogo.png">
+    </br></br></br>
+    <a href = "contact.html"><h2> Contact </h2></a>
   </br></br></br>
     <table>
       <tr>
