--- a/245 site/underConstruction.html
+++ b/245 site/underConstruction.html
@@ -39,14 +39,14 @@
         <a class="home-link" href="index.html">
           <div class="logoText">Kay's Originals</div>
         </a>
-        <a href="underConstruction.html">
+        <a href="artwork.html">
           <div class="tab1">Artwork</div>
         </a>
         <div class="dropdown">
           <div class="tab2"> More Info </div>
           <div class="dropdown-content">
-            <a href="placeholderBuy.html"><p>Buy</p></a>
-            <a href="placeholderSell.html"><p>Sell</p></a>
+            <div class = "droptabs"><a href="underConstruction.html"><p>Buy</p></a></div>
+            <div class = "droptabs"><a href="placeholderSell.html"><p>Sell</p></a></div>
           </div>
         </div>
         
